--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 <body>
 <ul id="etalage" class="etalage">
     <li>
-        <!--<img class="etalage_thumb_image" src="images/image1_thumb.jpg" />&lt;!&ndash;这里的src放的是略缩图 &ndash;&gt;-->
+        <img class="etalage_thumb_image" src="images/image1_thumb.jpg" /><!--这里的src放的是略缩图 -->
         <img class="etalage_source_image" src="images/image1_large.jpg" title="这里放本图片的描述" />                             <!--第二行img的src是第一行图片的放大图，也就是放大镜显示出来的部分 -->
     </li>
     <li>
-        <!--<img class="etalage_thumb_image" src="images/image2_thumb.jpg" />-->
+        <img class="etalage_thumb_image" src="images/image2_thumb.jpg" />
         <img class="etalage_source_image" src="images/image2_large.jpg" title="这个图片的描述也可以放在图片顶部<br>而且中间还可以换行" />
     </li>
     <li>
-        <!--<img class="etalage_thumb_image" src="images/image3_thumb.jpg" />-->
+        <img class="etalage_thumb_image" src="images/image3_thumb.jpg" />
         <img class="etalage_source_image" src="images/image3_large.jpg" />
     </li>
     <li>
-        <!--<img class="etalage_thumb_image" src="images/image4_thumb.jpg" />-->
+        <img class="etalage_thumb_image" src="images/image4_thumb.jpg" />
         <img class="etalage_source_image" src="images/image4_large.jpg" />
+    </li>
+    <li>
+        <img class="etalage_thumb_image" src="images/image_thumb.jpg" />
+        <img class="etalage_source_image" src="images/image_large.jpg" />
     </li>
 </ul>
 <button onclick="etalage_previous()">Previous image</button>
